src/public/css/home.css
body {
    display: flex;
    flex-flow: column;
    height: 100%;
    color: var(--text-color);
}

/* Topbar */
.topbar {
    overflow: hidden;
    display: flex;
    justify-content: space-between;
}

.div-topbar-group {
    display: flex;
}

.topbar-group-left {
    justify-content: left;
}

.topbar-group-center {
    justify-content: center;
    position: absolute;
    left: 50%;
    transform: translateX(-50%);
    width: 50%;
    height: 50px;
}

.topbar .btn {
    padding: 5px;
    margin: 8px 0px 8px 8px;
}

.topbar .topbar-group-right .btn-topbar {
    margin: 8px 8px 8px 0px;
}

#input-story-name {
    margin: 8px;
    font-size: medium;
    text-align: center;
}

/* The thing below the topbar */
.panel-main  {
    width: 100%;
    display: flex;

    flex-grow: 1;
}

#p-backend-info {
    margin: 10px;
    font-size: small;
    display: flex;
    align-items: center;
    color: var(--c-neutral-6);
}

/* left panel */

.panel-left {
    width: 25%;
    height: 100%;
}

/* buttons */
.btn-story-select {
    background-color: transparent;
    border: 0;
    width: 100%;
    color: white;
}

.btn-story-select:hover {
    background-color: var(--c-neutral-base);
}

/* Story paragraphs */
.p-story-index-title {
    font-size: large;
}

.p-story-index-blurb {
    color: gray;
}

/* text field */
.panel-middle {
    display: flex;
    flex-direction: column;
    align-items: center;

    width: 45%;
    height: 95%;
    margin: auto;
    gap: 16px;
}

/* Generic text editor field */
.div-editor {
    background-color: var(--c-neutral-2);
    border-radius: 12px;
    padding: 10px;

    scrollbar-width: thin;
    scrollbar-color: var(--c-neutral-6) transparent;
    overflow-y: auto;
}

#div-editor-desc {
    height: 200px;
    line-height: 1.5;
}

#div-editor-desc > * {
    margin-bottom: 16px;
}

#div-editor-content {
    width: 95%;
    height: 75vh;
}

#div-editor-content > * {
    margin-bottom: 16px;
}

#btn-ai-generate-more {
    float: right;
}

.middle-panel-btns {
    height: 32px;
    width: 95%;
}

.middle-panel-btns > .btn-secondary {
    margin-right: 32px;
}

/* Right panel */

.panel-right {
    width: 25%;
    height: 80vh;
    overflow-y: auto;
    overflow-x: hidden;
    scrollbar-width: thin;
    scrollbar-color: var(--c-neutral-6) transparent;
}

/* Story overview */

#input-story-tags {
    width: 80%;
}

#div-story-stats {
    padding: 16px;
}

.div-story-stats p {
    margin: 0 0 8px 0;
}

.header-story-overview {
    margin: 0 0 16px 0;
}


.p-story-overview {
    color: white;
    padding: 0px 24px;
}

.div-story-overview-tabs {
    margin: 10px;
}

/* story overview tabs */
.btn-overview-tab {
    background-color: var(--c-neutral-2);
    border: 1px solid var(--c-neutral-base);
    border-radius: 12px 12px 0 0;
    padding: 8px 16px;
}

.input-llm {
    width: 80%;
    margin-bottom: 24px;
}

/* Popup styles */

.div-popup-shadow {
    position: absolute;
    display: flex;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.75);
    z-index: 5;

    align-items: center;
    justify-content: center;
}

.div-popup {
    width: 400px;
    height: 300px;
    padding: 32px;

    background-color: var(--c-neutral-3);
    border-radius: 24px;
}

#div-ai-selector-popup form {
    margin: 16px 0px;
    padding: 16px;
}

/* Toast notifications */
#toast-notifications {
    position: absolute;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 32px;

    width: 100%;
    height: 100vh;
    padding: 32px 0;

    overflow: hidden;
}

.toast-notification {
    width: 512px;
    background-color: var(--c-neutral-4);
    border-radius: 16px;
    padding: 32px 32px;

    box-shadow: 0 16px 32px var(--c-neutral-1);
    color: var(--c-neutral-9);
    border: 0;
}

.toast-notification svg {
    padding-right: 16px;
}

/* prevent input overflow */
#div-ai-selector-popup input {
    width: calc(100% - 32px);
}

#btn-llm-selector-exit {
    margin: 16px 0;
    padding: 10px 20px;
}

